<resources>
    <string name="app_name">SAHASTA</string>
    <string name="title_tab_home">Beranda</string>
    <string name="title_tab_profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_nutrition">Pindai\nNutrisi</string>
    <string name="text_btn_scan">Pindai Nutrisi</string>
    <string name="text_btn_monitor">Perkembangan</string>
    <string name="text_btn_baby">Kelola\nDataAnak</string>
    <string name="text_welcome_user_home">Selamat datang, (nama pengguna)</string>
    <string name="desc_menu">more</string>
    <string name="text_username">Nama Pengguna</string>
    <string name="text_useremail">emailpengguna@email.com</string>
    <string name="text_logout">Keluar</string>
    <string name="desc_iv_avatar">Foto profil pengguna</string>
    <string name="desc_btn_back">Tombol kembali</string>
    <string name="text_btn_scan_camera">Pindai</string>
    <string name="text_btn_gallery">Galeri</string>
    <string name="text_btn_back">Kembali</string>
    <string name="title_baby_data">Kelola Data Anak</string>
    <string name="text_btn_add_baby_data">Tambah/Edit Data Anak</string>
    <string name="text_no_baby_data">*belum ada data</string>
    <string name="text_baby_bmi">BMI</string>
    <string name="text_baby_weight">Berat Badan(kg)</string>
    <string name="text_baby_height">Tinggi Badan(cm)</string>
    <string name="text_baby_gender">Jenis Kelamin</string>
    <string name="text_baby_age">Usia</string>
    <string name="text_baby_name">Nama Anak</string>
    <string name="text_last_measurement">Tanggal Pengukuran Terakhir : - -/- -/- - - -</string>
    <string name="hint_measurement_date">Tanggal Pengukuran*</string>
    <string name="hint_baby_name">Nama Anak*</string>
    <string name="hint_baby_birthdate">Tanggal Lahir*</string>
    <string name="hint_baby_gender">Jenis Kelamin*</string>
    <string name="hint_baby_height">Tinggi Badan(cm)*</string>
    <string name="hint_baby_weight">Berat Badan(kg)*</string>
    <string name="text_btn_save">Simpan</string>
    <string name="text_btn_cancel">Batal</string>
    <string name="title_baby_growth">Perkembangan</string>
    <string name="text_item_history">[ 1 Nov 2024 ] Tinggi 85 cm | Berat 12 kg</string>
    <string name="text_baby_growth_name">(Nama Anak)</string>
    <string name="text_baby_growth_age">(Usia Anak)</string>
    <string name="text_baby_growth_height">Tinggi : 85 cm</string>
    <string name="text_baby_growth_weight">Berat : 12 kg</string>
    <string name="text_baby_growth_bmi">BMI : Normal</string>
    <string name="title_history_list">Daftar Riwayat:</string>
    <string name="btn_add_new_baby_data">Tambah Data Baru</string>
    <string name="title_add_baby_growth">Tambah Data Perkembangan Baru</string>
    <string name="title_description_nutrition">Keterangan</string>
    <string name="title_nutrition_result">Hasil Pindai Nutrisi</string>
    <string name="title_back">Kembali</string>
    <string name="nutritional_information">Keterangan</string>
    <string name="nutritional_content">Kandungan nutrisi</string>
    <string name="title_login_page">SELAMAT DATANG DI SAHASTA
        SAHABAT GIZI ANAK UNTUK  CEGAH STUNTING!</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_nama_pengguna">Nama Pengguna</string>
    <string name="title_confirmpassword">Konfirmasi Password</string>
    <string name="btn_login">Masuk</string>
    <string name="login_page">Masuk</string>
    <string name="btn_frgt_pass">Lupa Password?</string>
    <string name="nothaveaccount">Belum memiliki akun?</string>
    <string name="regist">Daftar</string>s
    <string name="title_register">PENDAFTARAN</string>
    <string name="make_account">Buat Akun</string>
    <string name="have_account">Sudah memiliki akun?</string>
    <string name="register">silahkan daftar terlebih dahulu</string>
</resources>