<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_menu_home"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_baby_name"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_baby_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_baby_data"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_baby_age"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_baby_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_baby_data"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_baby_gender"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_baby_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_baby_data"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_baby_height"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_baby_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_baby_data"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_baby_weight"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_baby_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_baby_data"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_baby_bmi"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_baby_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_baby_data"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

</LinearLayout>