<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.nurtritionresult.NutritionResultActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:contentDescription="@string/desc_btn_back"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title_nutrition_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title_nutrition_result"
        android:textSize="20sp"
        android:textColor="@color/md_theme_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/appbar_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <View
        android:id="@+id/bg_menu"
        android:layout_width="329dp"
        android:layout_height="213dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_menu_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_border"
        app:layout_constraintVertical_bias="0.412" />

    <TextView
        android:id="@+id/title_info"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/nutritional_information"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bg_menu"
        app:layout_constraintStart_toStartOf="@id/bg_menu"
        app:layout_constraintTop_toTopOf="@id/bg_menu" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/nutritional_content"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bg_menu"
        app:layout_constraintEnd_toEndOf="@id/bg_menu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bg_menu"
        app:layout_constraintTop_toTopOf="@id/bg_menu" />

    <Button
        android:id="@+id/btn_back_from_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/bg_btn"
        android:paddingVertical="8dp"
        android:text="@string/title_back"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>