<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.babydata.BabyDataActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:contentDescription="@string/desc_btn_back"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title_baby_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title_baby_data"
        android:textSize="20sp"
        android:textColor="@color/md_theme_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/appbar_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_baby_data"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_border"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp">

            <TextView
                android:id="@+id/tv_last_measurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:text="@string/text_last_measurement"/>

            <include
                android:id="@+id/ll_baby_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_menu_baby_data"/>

            <Button
                android:id="@+id/btn_add_baby_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_add_baby_data"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>