<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.babygrowth.BabyGrowthActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:contentDescription="@string/desc_btn_back"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title_baby_growth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title_baby_growth"
        android:textSize="20sp"
        android:textColor="@color/md_theme_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/appbar_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_border"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/bg_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_menu_home"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="-16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_baby_bmi"/>

            <TextView
                android:id="@+id/tv_baby_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/text_baby_growth_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/bg_header"
                app:layout_constraintStart_toStartOf="@id/bg_header"
                app:layout_constraintEnd_toStartOf="@id/tv_baby_age"/>

            <TextView
                android:id="@+id/tv_baby_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/text_baby_growth_age"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/bg_header"
                app:layout_constraintEnd_toEndOf="@id/bg_header"
                app:layout_constraintStart_toEndOf="@id/tv_baby_name"/>

            <TextView
                android:id="@+id/tv_baby_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/text_baby_growth_height"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_baby_name"
                app:layout_constraintStart_toStartOf="@id/bg_header"
                app:layout_constraintEnd_toStartOf="@id/tv_baby_weight"/>

            <View
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="@color/black"
                app:layout_constraintStart_toEndOf="@id/tv_baby_height"
                app:layout_constraintTop_toTopOf="@id/tv_baby_height"
                app:layout_constraintBottom_toBottomOf="@id/tv_baby_height"
                app:layout_constraintEnd_toStartOf="@id/tv_baby_weight"/>

            <TextView
                android:id="@+id/tv_baby_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/text_baby_growth_weight"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_baby_name"
                app:layout_constraintStart_toEndOf="@id/tv_baby_height"
                app:layout_constraintEnd_toStartOf="@id/tv_baby_bmi"/>

            <View
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="@color/black"
                app:layout_constraintStart_toEndOf="@id/tv_baby_weight"
                app:layout_constraintTop_toTopOf="@id/tv_baby_height"
                app:layout_constraintBottom_toBottomOf="@id/tv_baby_height"
                app:layout_constraintEnd_toStartOf="@id/tv_baby_bmi"/>

            <TextView
                android:id="@+id/tv_baby_bmi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_baby_growth_bmi"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_baby_name"
                app:layout_constraintStart_toEndOf="@id/tv_baby_weight"
                app:layout_constraintEnd_toEndOf="@id/bg_header"/>

            <Button
                android:id="@+id/btn_add_baby_growth_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_btn"
                android:paddingVertical="8dp"
                android:text="@string/btn_add_new_baby_data"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bg_menu"
                app:layout_constraintVertical_bias="0.353" />

            <View
                android:id="@+id/bg_menu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_menu_home"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="-16dp"
                app:layout_constraintTop_toBottomOf="@id/bg_header"
                app:layout_constraintBottom_toBottomOf="@id/rv_history"/>

            <TextView
                android:id="@+id/title_history_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_history_list"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/bg_menu"
                app:layout_constraintEnd_toEndOf="@id/bg_menu"
                app:layout_constraintTop_toTopOf="@id/bg_menu"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_history"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:elevation="1dp"
                app:layout_constraintTop_toBottomOf="@id/title_history_list"
                app:layout_constraintStart_toStartOf="@id/bg_menu"
                app:layout_constraintEnd_toEndOf="@id/bg_menu"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>