<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.nutrition.NutritionFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:contentDescription="@string/desc_btn_back"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title_scan_nutrition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/text_btn_scan"
        android:textSize="20sp"
        android:textColor="@color/md_theme_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/appbar_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_scan_nutrition"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_border"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="128dp">

            <androidx.camera.view.PreviewView
                android:id="@+id/viewFinder"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_margin="32dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_btn_scan"
                android:src="@drawable/ic_scan_camera"
                app:layout_constraintTop_toTopOf="@id/viewFinder"
                app:layout_constraintBottom_toBottomOf="@id/viewFinder"
                app:layout_constraintStart_toStartOf="@id/viewFinder"
                app:layout_constraintEnd_toEndOf="@id/viewFinder"/>

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/text_btn_scan_camera"
                android:paddingVertical="16dp"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toBottomOf="@id/viewFinder"/>

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/text_btn_gallery"
                android:paddingVertical="16dp"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toBottomOf="@id/btn_scan"/>

            <Button
                android:id="@+id/btn_back_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/text_btn_back"
                android:textColor="@color/md_theme_primary"
                android:paddingVertical="16dp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="14dp"
                app:rippleColor="@color/md_theme_primary"
                app:strokeColor="@color/md_theme_primary"
                app:strokeWidth="1dp"
                app:layout_constraintTop_toBottomOf="@id/btn_gallery"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>